--- a/Report/Template.cshtml
+++ b/Report/Template.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="@Model.BootstrapLibraryPath">
     <title>Step Definition Reporter</title>
     <style>
         .report-text-small {
