Removed local libraries and icons

--- a/Report/Template.cshtml
+++ b/Report/Template.cshtml
@@ -95,15 +95,8 @@
                                     <ul id="list-@(stepInfo.StepId)" class="element-hidden">
                                         @foreach (var generatedStepDefinition in stepInfo.GeneratedStepDefinitions)
                                         {
-                                            <li>@(generatedStepDefinition.StepName) / 
-                                                @if (generatedStepDefinition.FeatureFilePath != null)
-                                                {
-                                                    <a target="_blank" href="@(generatedStepDefinition.FeatureFilePath)">@(generatedStepDefinition.FeatureFileName)</a>
-                                                }
-                                                else
-                                                {
-                                                    <span class="button-link">@(generatedStepDefinition.FeatureFileName)</span>
-                                                }
+                                            <li>
+                                                @(generatedStepDefinition.StepName) / <span class="button-link">@(generatedStepDefinition.FeatureFileName)</span>
                                             </li>
                                         }
                                     </ul>                            
