Added step definition ordering

--- a/Report/Template.cshtml
+++ b/Report/Template.cshtml
@@ -92,7 +92,7 @@
                 { 
                   if (stepInfo.NumberOfCalls == 0) 
                   {
-                    <div class="collapsible-header red lighten-1 white-text text-lighten-1 unused-step">
+                    <div class="collapsible-header hoverable red lighten-1 white-text text-lighten-1 unused-step">
                       <i class="material-icons">close</i>
                       @stepInfo.Value
                     </div>
@@ -100,7 +100,7 @@
                   else 
                   {
                     <li>
-                      <div class="collapsible-header">
+                      <div class="collapsible-header hoverable">
                         <i class="material-icons">done_all</i>
                         @stepInfo.Value
                         <span class="badge teal white-text text-lighten-1" data-badge-caption="total">
